Fixes min-width interfering with column collapse

--- a/app/assets/stylesheets/_board.scss
+++ b/app/assets/stylesheets/_board.scss
@@ -724,6 +724,9 @@
   .hb-column-header {
     cursor: pointer;
   }
+  &.hb-state-collapsed {
+    min-width: 90px;
+  }
   .collapsed {
     cursor: pointer;
     display: none;
